# hack.py

./: README.md
part-1-datatypes-logic/: guess-my-number-solution.py  guess-my-number-starter.py
part-2-functions-structures-classes/: ACMmember.py  README.md  main.py
part-2-functions-structures-classes/solutions/: ACMmember_sol.py  main_sol.py
part-3-web-dev-frontend/: README.md  pyproject.toml
part-3-web-dev-frontend/todolist/: forms.py  mainsite.py
part-3-web-dev-frontend/todolist/static/: style.css
part-3-web-dev-frontend/todolist/templates/: base.html  todolist.html
part-4-web-dev-backend/: README.md  pyproject.toml
part-4-web-dev-backend/todolist/: __init__.py  db.py  mainsite.py  schema.sql
