[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Paul Pan <panjunhong05@gmail.com>"]
description = ""
name = "flask-workshop-1"
version = "0.1.0"
[tool.poetry.dependencies]
click = "^7.1"
flask = "^1.1"
python = "^3.7"
Flask-WTF = "^0.14.3"
[tool.poetry.dev-dependencies]
